--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "vue": "^2.6.14",
+    "vue-notification": "^1.3.20",
+    "vue-pagination-2": "^3.1.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
