--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "axios": "^1.6.2",
     "vue": "^2.6.14",
     "vue-notification": "^1.3.20",
-    "vue-pagination-2": "^3.1.0",
     "vue-router": "^3.5.1",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
