--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "bootstrap-vue": "^2.23.1",
+    "jwt-decode": "^4.0.0",
     "vue": "^2.6.14",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1",
