--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap-vue": "^2.23.1",
+    "currency-formatter": "^1.5.9",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "vue": "^2.6.14",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1",
